--- a/theme/theme.css
+++ b/theme/theme.css
@@ -127,7 +127,7 @@ article{
 .intro > h1{
   line-height:1;
   color:var(--ui-color-white);
-  font-size:var(--ui-h1);}
+  font-size:var(--ui-h1-size);}
 
 .intro > .description{
   color:var(--ui-color-gray-200);}
@@ -138,7 +138,7 @@ article{
   row-gap:20px;}
 
 .intro > .info > h2{
-  font-size:var(--ui-h2);}
+  font-size:var(--ui-h2-size);}
 
 .intro > .info > ul{
   display:flex;
