--- a/ui/ui-spinner/ui-spinner.css
+++ b/ui/ui-spinner/ui-spinner.css
@@ -1,7 +1,5 @@
 ui-icon[icon="spinner"]{
-  display:inline-block;
-  animation:spin 0.8s linear infinite;
-}
+  animation:spin 0.8s linear infinite;}
 
 @keyframes spin{
   0% {transform:rotate(0deg);}
