--- a/ui/ui-button/ui-button.css
+++ b/ui/ui-button/ui-button.css
@@ -15,7 +15,8 @@ ui-button{
   outline-width:2px;
   outline-style:solid;
   outline-color:transparent;
-  cursor:pointer;}
+  cursor:pointer;
+  overflow:hidden;}
 
 ui-button[animated]{
   transition-duration:var(--ui-transition-duration);
