--- a/ui/ui-divider/ui-divider.css
+++ b/ui/ui-divider/ui-divider.css
@@ -8,39 +8,39 @@ ui-divider::after{
   content:'';
   display:block;
   flex-grow:1;
-  background-color:rgb(50,50,50);}
+  background-color:var(--ui-color-gray-750);}
 
-ui-divider[text] > span{
-  font-size:var(--ui-font-size-x-small);
-  color:rgb(175,175,175);
+ui-divider > *{
+  font-size:var(--ui-font-size-small);
+  color:var(--ui-color-gray-250);
   white-space:nowrap;}
 
-ui-divider[text][text-align="start"]::before,
-ui-divider[text][text-align="end"]::after{
+ui-divider[content-align="start"]::before,
+ui-divider[content-align="end"]::after{
   flex-grow:0;}
 
 ui-divider[orientation="horizontal"]{
   width:100%;
   flex-direction:row;}
 
-ui-divider[orientation="horizontal"] > span{padding-inline:15px;}
+ui-divider[orientation="horizontal"] > *{padding-inline:15px;}
 
 ui-divider[orientation="horizontal"]::before,
 ui-divider[orientation="horizontal"]::after{height:1px;}
 
-ui-divider[orientation="horizontal"][text][text-align="start"]::before,
-ui-divider[orientation="horizontal"][text][text-align="end"]::after{
+ui-divider[orientation="horizontal"][content-align="start"]::before,
+ui-divider[orientation="horizontal"][content-align="end"]::after{
   width:20px;}
 
 ui-divider[orientation="vertical"]{
   height:100%;
   flex-direction:column;}
 
-ui-divider[orientation="vertical"] > span{padding-block:10px;}
+ui-divider[orientation="vertical"] > *{padding-block:10px;}
 
 ui-divider[orientation="vertical"]::before,
 ui-divider[orientation="vertical"]::after{width:1px;}
 
-ui-divider[orientation="vertical"][text][text-align="start"]::before,
-ui-divider[orientation="vertical"][text][text-align="end"]::after{
+ui-divider[orientation="vertical"][content-align="start"]::before,
+ui-divider[orientation="vertical"][content-align="end"]::after{
   height:20px;}
