--- a/ui/ui-spinner/ui-spinner.css
+++ b/ui/ui-spinner/ui-spinner.css
@@ -1,7 +1,13 @@
-ui-icon[icon="spinner"]{
-  animation:spin 0.8s linear infinite;}
+ui-spinner{
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;}
 
-@keyframes spin{
-  0% {transform:rotate(0deg);}
-  100% {transform:rotate(360deg);}
-}
+ui-spinner > svg{
+  display:block;
+  height:24px;
+  width:24px;
+  fill:currentColor;
+  stroke:currentColor;
+  stroke-width:0;
+  animation:spin 0.8s linear infinite;}
