--- a/ui/ui-checkbox/ui-checkbox.css
+++ b/ui/ui-checkbox/ui-checkbox.css
@@ -3,9 +3,8 @@ ui-checkbox{
   display:inline-flex;
   align-items:center;
   vertical-align:middle;
-  height:24px;
-  width:24px;
-  aspect-ratio:1;
+  height:var(--ui-checkbox-size);
+  width:var(--ui-checkbox-size);
   border:none;
   outline-width:2px;
   outline-offset:2px;
@@ -18,7 +17,7 @@ ui-checkbox{
 
 ui-checkbox[ui]{
   transition-duration:var(--ui-transition-duration);
-  transition-property:background-color,color;}
+  transition-property:outline-color,color;}
 
 ui-checkbox::before{
   content:'';
@@ -27,7 +26,7 @@ ui-checkbox::before{
   border-radius:inherit;
   border-width:2px;
   border-style:solid;
-  border-color:rgb(70,70,70);
+  border-color:var(--ui-checkbox-border-color);
   overflow:hidden;}
 
 ui-checkbox:focus-visible:not([disabled]){
@@ -35,16 +34,31 @@ ui-checkbox:focus-visible:not([disabled]){
 
 ui-checkbox > svg{
   position:absolute;
-  padding:calc(var(--ui-object-height) / 10);
+  background-color:var(--ui-color-blue-500);
+  color:var(--ui-color-white);
   stroke-width:0;
   border-radius:inherit;
-  overflow:hidden;}
+  overflow:hidden;
+  opacity:0;}
 
 ui-checkbox[checked] > svg{
-  background-color:rgb(25,125,230);
-  color:rgb(255,255,255);}
+  opacity:1;}
 
 /* color */
 ui-checkbox[color="gray"]{
   --ui-checkbox-background-color:var(--ui-color-gray-800);
+  --ui-checkbox-border-color:var(--ui-color-gray-500);
   --ui-checkbox-outline-focus:var(--ui-color-gray-400);}
+
+/* size */
+ui-checkbox[size="x-small"]{
+  --ui-checkbox-size:var(--ui-height-x-small);
+  --ui-icon-size:var(--ui-icon-size-x-small);}
+
+ui-checkbox[size="small"]{
+  --ui-checkbox-size:var(--ui-height-small);
+  --ui-icon-size:var(--ui-icon-size-small);}
+
+ui-checkbox[size="medium"]{
+  --ui-checkbox-size:var(--ui-height-medium);
+  --ui-icon-size:var(--ui-icon-size-medium);}
