--- a/ui/ui-button/ui-button.css
+++ b/ui/ui-button/ui-button.css
@@ -12,7 +12,7 @@ ui-button{
   font-size:var(--ui-font-size);
   color:var(--ui-button-color);
   background-color:var(--ui-button-background-color);
-  outline-offset:0px;
+  outline-offset:2px;
   outline-width:2px;
   outline-style:solid;
   outline-color:transparent;
@@ -70,21 +70,21 @@ ui-button[color="default"]{
 /* size */
 ui-button[size="small"]{
   --ui-font-size:var(--ui-font-size-small);
-  --ui-button-height:var(--ui-height-small);
+  --ui-button-height:var(--ui-size-small);
   --ui-button-padding-inline:var(--ui-padding-inline-small);
   --ui-button-column-gap:var(--ui-column-gap-small);
   --ui-icon-size:var(--ui-icon-size-small);}
 
 ui-button[size="medium"]{
   --ui-font-size:var(--ui-font-size-medium);
-  --ui-button-height:var(--ui-height-medium);
+  --ui-button-height:var(--ui-size-medium);
   --ui-button-padding-inline:var(--ui-padding-inline-medium);
   --ui-button-column-gap:var(--ui-column-gap-medium);
   --ui-icon-size:var(--ui-icon-size-medium);}
 
 ui-button[size="large"]{
   --ui-font-size:var(--ui-font-size-large);
-  --ui-button-height:var(--ui-height-large);
+  --ui-button-height:var(--ui-size-large);
   --ui-button-padding-inline:var(--ui-padding-inline-large);
   --ui-button-column-gap:var(--ui-column-gap-large);
   --ui-icon-size:var(--ui-icon-size-large);}
