--- a/ui/ui-button/ui-button.css
+++ b/ui/ui-button/ui-button.css
@@ -24,7 +24,7 @@ ui-button[ui]{
   transition-property:background-color,outline-color,color;}
 
 ui-button:focus-visible:not([disabled]){
-  outline-color:var(--ui-button-outline-focus);}
+  outline-color:var(--ui-button-outline-color);}
 
 ui-button svg{
   height:var(--ui-icon-size)!important;
@@ -65,7 +65,7 @@ ui-button[color="default"]{
   --ui-button-background-color-active:var(--ui-color-gray-700);
   --ui-button-color:var(--ui-color-gray-150);
   --ui-button-color-hover:var(--ui-color-white);
-  --ui-button-outline-focus:var(--ui-color-gray-400);}
+  --ui-button-outline-color:var(--ui-outline-color);}
 
 /* size */
 ui-button[size="small"]{
