--- a/ui/ui-input/ui-input.css
+++ b/ui/ui-input/ui-input.css
@@ -3,24 +3,26 @@ ui-input{
   display:inline-flex;
   align-items:center;
   vertical-align:middle;
-  outline-offset:0px;
+  height:var(--ui-input-size);
   outline-width:2px;
+  outline-offset:2px;
   outline-style:solid;
-  outline-color:var(--ui-color-input-outline);
-  background-color:var(--ui-color-input-surface);
-  overflow:hidden;}
-
-ui-input[size="small"]{height:var(--ui-size-small);}
-ui-input[size="medium"]{height:var(--ui-size-medium);}
-ui-input[size="large"]{height:var(--ui-size-large);}
+  outline-color:transparent;
+  background-color:var(--ui-input-background-color);}
 
 ui-input[ui]{
   transition-duration:var(--ui-transition-duration);
   transition-property:background-color,outline-color;}
 
-ui-input[disabled]{
-  outline-color:var(--ui-color-form-control-outline-disabled);
-  background-color:var(--ui-color-form-control-surface-disabled);}
+ui-input::before{
+  position:absolute;
+  content:'';
+  inset:0;
+  border-radius:inherit;
+  border-width:1px;
+  border-style:solid;
+  border-color:var(--ui-input-border-color);
+  pointer-events:none;}
 
 ui-input input{
   direction:inherit;
@@ -28,71 +30,75 @@ ui-input input{
   outline:none;
   padding:0;
   height:100%;
-  color:var(--ui-color-input-content);
+  font-size:var(--ui-input-font-size);
+  padding-inline:var(--ui-input-padding-inline);
+  color:var(--ui-input-color);
   background-color:transparent;}
 
-ui-input[disabled] input{
-  color:var(--ui-color-form-control-content-disabled);}
-
 ui-input input::placeholder{
-  color:var(--ui-color-input-placeholder);}
+  color:var(--ui-input-placeholder-color);}
 
+ui-input[disabled] input,
 ui-input[disabled] input::placeholder{
-  color:var(--ui-color-input-placeholder-disabled);}
-
-ui-input[size="small"] > input{
-  padding-inline:calc(var(--ui-size-small) / 4 + 4px);
-  font-size:var(--ui-font-size-x-small);}
-
-ui-input[size="medium"] > input{
-  padding-inline:calc(var(--ui-size-medium) / 4 + 4px);
-  font-size:var(--ui-font-size-small);}
-
-ui-input[size="large"] > input{
-  padding-inline:calc(var(--ui-size-large) / 4 + 6px);
-  font-size:var(--ui-font-size-medium);}
+  color:var(--ui-input-disabled-color);}
 
 ui-input[clearable] > input{
   padding-inline-end:0;}
 
 ui-input > svg{
   display:block;
-  color:var(--ui-color-input-icons);
-  fill:currentColor;
-  shape-rendering:geometricPrecision;
+  height:100%;
+  width:var(--ui-input-icon-size);
+  color:var(--ui-input-svg-color);
+  padding:var(--ui-input-icon-padding);
+  stroke-width:0;
+  cursor:pointer;
+  pointer-events:all!important;}
+
+ui-input[ui] > svg{
   transition-duration:var(--ui-transition-duration);
-  transition-property:color;
-  cursor:pointer;}
-
-ui-input[disabled] > svg{opacity:0;}
-
-ui-input[size="small"] > svg{
-  height:var(--ui-size-small);
-  width:var(--ui-size-small);
-  padding:calc(var(--ui-size-small) / 4 - 2px);}
-
-ui-input[size="medium"] > svg{
-  height:var(--ui-size-medium);
-  width:var(--ui-size-medium);
-  padding:calc(var(--ui-size-medium) / 4 - 2px);}
-
-ui-input[size="large"] > svg{
-  height:var(--ui-size-large);
-  width:var(--ui-size-large);
-  padding:calc(var(--ui-size-large) / 4 - 2px);}
+  transition-property:color;}
 
 @media (hover:hover){
-  ui-input:hover:not([disabled]):not([status]){
-    outline-color:var(--ui-color-input-outline-active);}
-
   ui-input > svg:hover{
     color:var(--ui-color-input-icons-active);}
 }
 
 ui-input:focus-within:not([disabled]):not([status]){
-  outline-color:var(--ui-color-input-outline-active);}
+  outline-color:var(--ui-input-outline-color);}
 
-ui-input[status="accent"]{outline-color:var(--ui-color-accent);}
-ui-input[status="error"]{outline-color:var(--ui-color-critical);}
-ui-input[status="success"]{outline-color:var(--ui-color-positive);}
-ui-input[status="warning"]{outline-color:var(--ui-color-warning);}
+ui-input[status="accent"]{border-color:var(--ui-color-accent);}
+ui-input[status="error"]{border-color:var(--ui-color-critical);}
+ui-input[status="success"]{border-color:var(--ui-color-positive);}
+ui-input[status="warning"]{border-color:var(--ui-color-warning);}
+
+/* color */
+ui-input[color="default"]{
+  --ui-input-background-color:var(--ui-color-gray-800);
+  --ui-input-border-color:var(--ui-color-gray-500);
+  --ui-input-border-color-hover:var(--ui-color-gray-100);
+  --ui-input-outline-color:var(--ui-outline-color);
+  --ui-input-color:var(--ui-color-white);
+  --ui-input-svg-color:var(--ui-color-gray-500);
+  --ui-input-placeholder-color:var(--ui-color-gray-500);
+  --ui-input-disabled-color:var(--ui-color-gray-300);}
+
+/* size */
+ui-input[size="small"]{
+  --ui-input-size:var(--ui-size-small);
+  --ui-input-icon-size:var(--ui-icon-size-small);
+  --ui-input-icon-padding:2px;
+  --ui-input-font-size:var(--ui-font-size-small);
+  --ui-input-padding-inline:var(--ui-padding-inline-small);}
+
+ui-input[size="medium"]{
+  --ui-input-size:var(--ui-size-medium);
+  --ui-input-icon-size:var(--ui-icon-size-medium);
+  --ui-input-font-size:var(--ui-font-size-medium);
+  --ui-input-padding-inline:var(--ui-padding-inline-medium);}
+
+ui-input[size="large"]{
+  --ui-input-size:var(--ui-size-large);
+  --ui-input-icon-size:var(--ui-icon-size-large);
+  --ui-input-font-size:var(--ui-font-size-large);
+  --ui-input-padding-inline:var(--ui-padding-inline-large);}
