--- a/ui/ui-button/ui-button.css
+++ b/ui/ui-button/ui-button.css
@@ -9,7 +9,7 @@ ui-button{
   padding-inline-start:var(--ui-button-padding-inline);
   padding-inline-end:var(--ui-button-padding-inline);
   column-gap:var(--ui-button-column-gap);
-  font-size:var(--ui-font-size);
+  font-size:var(--ui-button-font-size);
   color:var(--ui-button-color);
   background-color:var(--ui-button-background-color);
   outline-offset:2px;
@@ -26,8 +26,8 @@ ui-button:focus-visible:not([disabled]){
   outline-color:var(--ui-button-outline-color);}
 
 ui-button svg{
-  height:var(--ui-icon-size)!important;
-  width:var(--ui-icon-size)!important;}
+  height:var(--ui-button-icon-size)!important;
+  width:var(--ui-button-icon-size)!important;}
 
 ui-button > ui-spinner{
   position:absolute;
@@ -64,12 +64,12 @@ ui-button[color="default"]{
   --ui-button-background-color-active:var(--ui-color-gray-700);
   --ui-button-color:var(--ui-color-gray-150);
   --ui-button-color-hover:var(--ui-color-white);
-  --ui-button-outline-color:var(--ui-outline-color);}
+  --ui-button-outline-color:var(--ui-color-gray-500);}
 
 /* size */
 ui-button[size="default"]{
-  --ui-font-size:var(--ui-font-size-medium);
+  --ui-button-font-size:14px;
   --ui-button-height:32px;
-  --ui-button-padding-inline:var(--ui-padding-inline-medium);
-  --ui-button-column-gap:var(--ui-column-gap-medium);
-  --ui-icon-size:var(--ui-icon-size-medium);}
+  --ui-button-padding-inline:16px;
+  --ui-button-column-gap:6px;
+  --ui-button-icon-size:20px;}
